# school_project_public_2

./: .env  README.md  agent.py  pyproject.toml
docs/: databaseText.json
materials/: basicRAGindexing.py  loadingPDFs.py  qdrant_database.py  saving_and_loading.py
